--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -15,13 +15,13 @@ body {
     word-wrap: break-word;
 }
 
+img {
+    max-width: 100%;
+}
+
 .figure {
     margin: 0;
     padding: 0;
-}
-
-img {
-    max-width: 100%;
 }
 
 .outer-wrap {
@@ -98,7 +98,7 @@ img {
  * Main
  */
 .outer-wrap-main {
-    min-height: 30em;
+    min-height: 40em;
     margin-bottom: 4em;
 }
 
@@ -135,12 +135,14 @@ h1 {
     display: block;
     float: right;
     padding-right: 2em;
+    width: 40%;
 }
 
 .left {
     display: block;
     float: left;
     padding-left: 2em;
+    width: 40%;
 }
 
 .green {
@@ -156,6 +158,10 @@ h1 {
 .wrapper {
     background-color: pink;
     text-align: center;
+}
+
+.histograms {
+    clear: both;
 }
 
 /**
