--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -165,6 +165,25 @@ h1 {
 }
 
 /**
+* Movie database
+*/
+table {
+    border: 1px solid #ccc;
+    margin-top: 2rem;
+    padding: 0.5rem;
+}
+
+.thumb {
+    max-width: 100px;
+    max-height: 100px;
+}
+
+.movie-nav {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+/**
  * Style a dice using UTF-8 characters.
  */
 .dice-utf8 .dice-1::after { content: "\2680"; }
