--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -35,11 +35,10 @@ img {
     padding: 0 0.5em;
 }
 
-.error {
+.error,
+.deleted {
     color: red;
 }
-
-
 
 /**
  * Header
@@ -182,6 +181,75 @@ table {
     margin-top: 2rem;
     margin-bottom: 2rem;
 }
+
+/**
+* CMS
+*/
+tr.first {
+    background-color: #ddd;
+}
+
+tr:hover {
+    background-color: #eee;
+}
+
+th {
+    font-weight: bold;
+    border-bottom: 1px solid #ccc;
+}
+
+th,
+td {
+    padding: 4px;
+}
+
+img.thumb {
+    max-width: 100px;
+    max-height: 100px;
+}
+
+a.icons {
+    color: inherit;
+}
+
+a:hover.icons {
+    opacity: 0.7;
+}
+
+input[type=text],
+input[type=datetime],
+textarea {
+    width: 400px;
+}
+
+textarea {
+    height: 200px;
+}
+
+label {
+    font-size: small;
+}
+
+input,
+textarea,
+legend,
+button {
+    font-size: large;
+}
+
+article {
+    margin-bottom: 24px;
+}
+
+.hidden {
+    visibility: hidden;
+    display: none;
+}
+
+.error-msg {
+    color: red;
+}
+
 
 /**
  * Style a dice using UTF-8 characters.
